// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SiteFooter renders correctly with no social links 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: 16px;
  grid-template-columns: 1fr min(1440px, 100% - 32px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  display: flex;
  gap: 1.5rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c18 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c11 {
  display: inline-flex;
  align-items: stretch;
  font-family: -apple-system,BlinkMacSystemFont,sans-serif;
  font-size: 15px;
  line-height: 1.15;
}

.c12 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 0.3em 0.5em;
  border: 0.13em solid #00ffbc;
}

.c13 {
  background: #fff;
  color: #0e11a8;
  border-right: 0;
  border-radius: 0.3em 0 0 0.3em;
  min-width: 8.2em;
}

.c14 {
  background: #00ffbc;
  color: #0e11a8;
  font-weight: 700;
  text-decoration: none;
  border-left: 0;
  border-radius: 0 0.3em 0.3em 0;
}

.c7 {
  min-height: 3.5rem;
}

.c9 {
  align-items: center;
  display: flex;
}

.c0 {
  background: var(--color-badge-bg);
  border-top: 1px solid rgba(128, 128, 128, 0.12);
  padding-bottom: 1.5rem;
  padding-top: 3rem;
}

.c2 {
  border-bottom: 1px solid rgba(128, 128, 128, 0.12);
  margin-bottom: 2rem;
  padding-bottom: 2rem;
  text-align: center;
}

.c3 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1;
  margin: 0 0 1.5rem;
}

.c5 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  text-align: center;
}

.c6 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: center;
}

.c8 {
  display: flex;
  zoom: 0.9;
}

.c15 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

.c17 {
  display: block;
  height: 2.5rem;
  width: auto;
}

.c10 {
  zoom: 0.75;
}

.c16 {
  align-items: center;
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  gap: 0.5rem;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (max-width: 899.99px) {
  .c0 {
    display: none;
  }
}

@media (max-width: 899.99px) {
  .c2 {
    margin-bottom: 1rem;
    padding-bottom: 1rem;
  }
}

@media (min-width: 900px) {
  .c2 {
    border-bottom: none;
    margin-bottom: 1.5rem;
    padding-bottom: 0;
  }
}

@media (max-width: 899.99px) {
  .c3 {
    font-size: 1.5rem;
    margin-bottom: 1rem;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 2.5rem;
  }
}

@media (min-width: 900px) {
  .c5 {
    align-items: flex-end;
    display: grid;
    gap: 1.5rem;
    grid-template-columns: 1fr 1fr 1fr;
    text-align: left;
  }
}

@media (min-width: 900px) {
  .c6 {
    align-items: flex-start;
  }
}

@media (min-width: 900px) {
  .c15 {
    align-items: center;
    text-align: center;
  }
}

@media (min-width: 900px) {
  .c16 {
    align-items: flex-end;
  }
}

<div>
  <footer
    class="c0"
    role="contentinfo"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Let's work together.
        </h2>
        <div
          class="c4"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
            data-testid="tree-nation-offset-website"
          >
            <div
              class="c9"
            >
              <div
                data-lang="en"
                data-theme="light"
                data-tree-nation-code="a4d3639b36ee64ed"
                data-widget-type="offset-website"
              />
            </div>
          </div>
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              <span
                class="c12 c13"
              >
                0.05
                g of CO₂/view
              </span>
              <a
                aria-label="Website Carbon result: 0.05 grams of CO₂ per page view, tested 2026-07-12"
                class="c12 c14"
                href="https://www.websitecarbon.com/website/agostiniandrea-dev/"
                rel="noopener noreferrer"
                target="_blank"
              >
                Website Carbon
              </a>
            </span>
          </div>
        </div>
        <div
          class="c15"
        />
        <div
          class="c16"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-label="Andrea Agostini"
              class="c17"
              focusable="false"
              role="img"
              viewBox="166.5 259.8 707 495.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M461.33 570.08C465.16 574.3 468.38 578.41 471.52 583.66L559.34 730.65C570.81 749.83 582.73 755.36 604.59 755.36L655.56 755.36C696.18 755.36 715.69 731.49 715.73 691.3L715.94 623.52C716.02 542.85 762.83 568.39 810.35 527.69C855.53 488.98 884.86 399.06 871.24 340.93C866.17 340.94 861.61 340.96 856.19 342.34L779.78 361.87C764.84 365.68 750.16 374.05 736.98 381.91C686.09 412.25 650.69 463.37 656.39 525.24C658.09 543.65 663.15 563.73 673.62 578.39C676.98 574.29 679.45 570.24 681.97 564.87L696.73 533.58C697.65 531.62 698.65 529.57 699.75 527.71L720.08 493.4C738.17 462.67 780.45 417.05 813.7 405.8C810.65 410.19 807 414.22 803.07 418.39L779.33 443.63C776.61 446.53 774 449.69 771.61 452.88L751.28 480.04C750.3 481.36 749.25 482.78 748.43 484.2L678.6 606.61C677.25 608.98 676.19 611.57 675.1 614.07L659.52 650.37C654.83 661.22 653.16 665.56 642.14 668.69C636.04 663.93 633.27 660.02 629.1 653L521.63 471.43C510.9 453.31 499.4 448.66 478.94 448.66L445.54 448.66C424.48 448.66 412.64 454.13 401.52 472.62L292.57 653.57C285.19 665.86 281.82 669.6 267.75 666.94C266.48 660.83 265.82 655.37 265.82 648.72L265.44 478.17C265.44 476.41 265.45 474.63 265.44 472.87L265.74 378.71C265.72 372.95 266.2 367.55 266.79 362.06C272.64 360.53 277.55 359.82 284.15 359.82L604.88 359.38C612.24 359.37 617.67 358.72 624.3 356.77C625.48 350.53 626.1 344.94 626.1 338.29L626.1 281.14C626.1 274.52 625.51 268.81 624.43 262.55C617.81 260.49 612.53 259.82 605.11 259.82L283.83 259.82C264.5 259.83 254.21 263.54 240.78 277.8L179.66 342.9C169.41 353.79 166.59 361.23 166.71 376.37L166.96 413.6C166.97 415.39 166.96 417.17 166.96 418.96L166.52 682.71C166.51 723.99 193.36 755.36 234.92 755.36L312.25 755.36C332.93 755.36 345.43 750.15 356.7 732.16L449.73 583.8C453.41 577.92 456.52 574.08 461.33 570.08Z"
                data-testid="brand-logo-symbol"
                fill="#2F8A82"
              />
            </svg>
          </span>
          <p
            class="c18"
            style="color: var(--color-paragraph);"
          >
            © 
            2026
             
            Andrea Agostini
          </p>
        </div>
      </div>
    </section>
  </footer>
</div>
`;

exports[`SiteFooter renders correctly with social links 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: 16px;
  grid-template-columns: 1fr min(1440px, 100% - 32px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  display: flex;
  gap: 1.5rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c5 {
  color: var(--color-highlight);
  font-size: 1rem;
  line-height: 1;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

.c5:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c18 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c13 {
  display: inline-flex;
  align-items: stretch;
  font-family: -apple-system,BlinkMacSystemFont,sans-serif;
  font-size: 15px;
  line-height: 1.15;
}

.c14 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 0.3em 0.5em;
  border: 0.13em solid #00ffbc;
}

.c15 {
  background: #fff;
  color: #0e11a8;
  border-right: 0;
  border-radius: 0.3em 0 0 0.3em;
  min-width: 8.2em;
}

.c16 {
  background: #00ffbc;
  color: #0e11a8;
  font-weight: 700;
  text-decoration: none;
  border-left: 0;
  border-radius: 0 0.3em 0.3em 0;
}

.c9 {
  min-height: 3.5rem;
}

.c11 {
  align-items: center;
  display: flex;
}

.c0 {
  background: var(--color-badge-bg);
  border-top: 1px solid rgba(128, 128, 128, 0.12);
  padding-bottom: 1.5rem;
  padding-top: 3rem;
}

.c2 {
  border-bottom: 1px solid rgba(128, 128, 128, 0.12);
  margin-bottom: 2rem;
  padding-bottom: 2rem;
  text-align: center;
}

.c3 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1;
  margin: 0 0 1.5rem;
}

.c6 {
  color: var(--color-highlight);
  font-weight: 700;
}

.c7 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  text-align: center;
}

.c8 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: center;
}

.c10 {
  display: flex;
  zoom: 0.9;
}

.c17 {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

.c22 {
  display: block;
  height: 2.5rem;
  width: auto;
}

.c19 {
  color: var(--color-paragraph);
  max-width: 36ch;
}

.c20 {
  display: block;
  text-wrap: balance;
}

.c12 {
  zoom: 0.75;
}

.c21 {
  align-items: center;
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  gap: 0.5rem;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (hover: hover) {
  .c5:hover {
    color: var(--color-tertiary);
  }
}

@media (max-width: 899.99px) {
  .c0 {
    display: none;
  }
}

@media (max-width: 899.99px) {
  .c2 {
    margin-bottom: 1rem;
    padding-bottom: 1rem;
  }
}

@media (min-width: 900px) {
  .c2 {
    border-bottom: none;
    margin-bottom: 1.5rem;
    padding-bottom: 0;
  }
}

@media (max-width: 899.99px) {
  .c3 {
    font-size: 1.5rem;
    margin-bottom: 1rem;
  }
}

@media (min-width: 1200px) {
  .c3 {
    font-size: 2.5rem;
  }
}

@media (min-width: 900px) {
  .c7 {
    align-items: flex-end;
    display: grid;
    gap: 1.5rem;
    grid-template-columns: 1fr 1fr 1fr;
    text-align: left;
  }
}

@media (min-width: 900px) {
  .c8 {
    align-items: flex-start;
  }
}

@media (min-width: 900px) {
  .c17 {
    align-items: center;
    text-align: center;
  }
}

@media (min-width: 900px) {
  .c21 {
    align-items: flex-end;
  }
}

<div>
  <footer
    class="c0"
    role="contentinfo"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Let's work together.
        </h2>
        <div
          class="c4"
        >
          <a
            aria-label="LinkedIn"
            class="c5 c6"
            href="https://linkedin.com/in/agostiniandrea"
            rel="noopener noreferrer"
            target="_blank"
          >
            LinkedIn
          </a>
          <a
            aria-label="GitHub"
            class="c5 c6"
            href="https://github.com/agostiniandrea"
            rel="noopener noreferrer"
            target="_blank"
          >
            GitHub
          </a>
          <a
            aria-label="Email"
            class="c5 c6"
            href="mailto:a.agostini92@gmail.com"
          >
            Email
          </a>
        </div>
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <div
            class="c9 c10"
            data-testid="tree-nation-offset-website"
          >
            <div
              class="c11"
            >
              <div
                data-lang="en"
                data-theme="light"
                data-tree-nation-code="a4d3639b36ee64ed"
                data-widget-type="offset-website"
              />
            </div>
          </div>
          <div
            class="c12"
          >
            <span
              class="c13"
            >
              <span
                class="c14 c15"
              >
                0.05
                g of CO₂/view
              </span>
              <a
                aria-label="Website Carbon result: 0.05 grams of CO₂ per page view, tested 2026-07-12"
                class="c14 c16"
                href="https://www.websitecarbon.com/website/agostiniandrea-dev/"
                rel="noopener noreferrer"
                target="_blank"
              >
                Website Carbon
              </a>
            </span>
          </div>
        </div>
        <div
          class="c17"
        >
          <p
            class="c18 c19"
          >
            <span
              class="c20"
            >
              Building for the web, one component at a time. Based in Bangkok.
            </span>
          </p>
        </div>
        <div
          class="c21"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-label="Andrea Agostini"
              class="c22"
              focusable="false"
              role="img"
              viewBox="166.5 259.8 707 495.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M461.33 570.08C465.16 574.3 468.38 578.41 471.52 583.66L559.34 730.65C570.81 749.83 582.73 755.36 604.59 755.36L655.56 755.36C696.18 755.36 715.69 731.49 715.73 691.3L715.94 623.52C716.02 542.85 762.83 568.39 810.35 527.69C855.53 488.98 884.86 399.06 871.24 340.93C866.17 340.94 861.61 340.96 856.19 342.34L779.78 361.87C764.84 365.68 750.16 374.05 736.98 381.91C686.09 412.25 650.69 463.37 656.39 525.24C658.09 543.65 663.15 563.73 673.62 578.39C676.98 574.29 679.45 570.24 681.97 564.87L696.73 533.58C697.65 531.62 698.65 529.57 699.75 527.71L720.08 493.4C738.17 462.67 780.45 417.05 813.7 405.8C810.65 410.19 807 414.22 803.07 418.39L779.33 443.63C776.61 446.53 774 449.69 771.61 452.88L751.28 480.04C750.3 481.36 749.25 482.78 748.43 484.2L678.6 606.61C677.25 608.98 676.19 611.57 675.1 614.07L659.52 650.37C654.83 661.22 653.16 665.56 642.14 668.69C636.04 663.93 633.27 660.02 629.1 653L521.63 471.43C510.9 453.31 499.4 448.66 478.94 448.66L445.54 448.66C424.48 448.66 412.64 454.13 401.52 472.62L292.57 653.57C285.19 665.86 281.82 669.6 267.75 666.94C266.48 660.83 265.82 655.37 265.82 648.72L265.44 478.17C265.44 476.41 265.45 474.63 265.44 472.87L265.74 378.71C265.72 372.95 266.2 367.55 266.79 362.06C272.64 360.53 277.55 359.82 284.15 359.82L604.88 359.38C612.24 359.37 617.67 358.72 624.3 356.77C625.48 350.53 626.1 344.94 626.1 338.29L626.1 281.14C626.1 274.52 625.51 268.81 624.43 262.55C617.81 260.49 612.53 259.82 605.11 259.82L283.83 259.82C264.5 259.83 254.21 263.54 240.78 277.8L179.66 342.9C169.41 353.79 166.59 361.23 166.71 376.37L166.96 413.6C166.97 415.39 166.96 417.17 166.96 418.96L166.52 682.71C166.51 723.99 193.36 755.36 234.92 755.36L312.25 755.36C332.93 755.36 345.43 750.15 356.7 732.16L449.73 583.8C453.41 577.92 456.52 574.08 461.33 570.08Z"
                data-testid="brand-logo-symbol"
                fill="#2F8A82"
              />
            </svg>
          </span>
          <p
            class="c18"
            style="color: var(--color-paragraph);"
          >
            © 
            2026
             
            Andrea Agostini
          </p>
        </div>
      </div>
    </section>
  </footer>
</div>
`;
